--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,17 @@
     <link href="./index.xml" rel="alternate" type="application/rss+xml" title="Homeassistant使用教程 :: HaBox 技术支持站">
     <link href="./index.print.html" rel="alternate" type="text/html" title="Homeassistant使用教程 :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1735613649" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1735613649" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1735613649" rel="stylesheet">
-    <link href="./css/auto-complete.css?1735613649" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1735613649" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1735613649" rel="stylesheet">
-    <link href="./css/fonts.css?1735613649" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1735613649" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1735613649" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1735613649" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1735613649" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1735613649" rel="stylesheet">
-    <link href="./css/print.css?1735613649" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1735613649"></script>
+    <link href="./css/fontawesome-all.min.css?1735628885" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1735628885" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1735628885" rel="stylesheet">
+    <link href="./css/auto-complete.css?1735628885" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1735628885" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1735628885" rel="stylesheet">
+    <link href="./css/fonts.css?1735628885" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1735628885" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1735628885" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1735628885" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1735628885" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1735628885" rel="stylesheet">
+    <link href="./css/print.css?1735628885" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1735628885"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -146,6 +146,8 @@
 <li><a href="./about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍</a></li>
 <li><a href="./about/brand-new-boxes-arrived/index.html">新到一批Homeassistant盒子，几乎没有瑕疵</a></li>
 </ul>
+<p><a href="#R-image-8d92aa9bc71bfcf76d692eea2768bc53" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8d92aa9bc71bfcf76d692eea2768bc53"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
 
 <script
   id="utteranc"
@@ -241,13 +243,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1735613649" defer></script>
-        <script src="./js/lunr/lunr.min.js?1735613649" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1735613649" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1735613649" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1735613649" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1735613649" defer></script>
-        <script src="./js/search.js?1735613649" defer></script>
+        <script src="./js/auto-complete.js?1735628885" defer></script>
+        <script src="./js/lunr/lunr.min.js?1735628885" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1735628885" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1735628885" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1735628885" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1735628885" defer></script>
+        <script src="./js/search.js?1735628885" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -344,9 +346,9 @@
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1735613649" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1735613649" defer></script>
-    <script src="./js/theme.js?1735613649" defer></script>
+    <script src="./js/clipboard.min.js?1735628885" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1735628885" defer></script>
+    <script src="./js/theme.js?1735628885" defer></script>
 
 
   </body>
